--- a/taotao-parent/taotao-portal/src/main/webapp/WEB-INF/web.xml
+++ b/taotao-parent/taotao-portal/src/main/webapp/WEB-INF/web.xml
@@ -50,4 +50,10 @@
 		<!-- 伪静态化 -->
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
+	<!-- 解决以.html结尾的url,做POST请求时报406 -->
+	<servlet-mapping>
+		<servlet-name>taotao-portal</servlet-name>
+		<!-- 伪静态化 -->
+		<url-pattern>*.action</url-pattern>
+	</servlet-mapping>
 </web-app>
