use codis as cache

--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -29,6 +29,8 @@
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<jedis.version>2.7.2</jedis.version>
 		<solrj.version>4.10.3</solrj.version>
+		<!-- <jodis.version>0.2.2</jodis.version> -->
+		<jodis.version>0.3.0</jodis.version>
 	</properties>
 	<!-- 只定义依赖的版本，并不实际依赖 -->
 	<dependencyManagement>
@@ -174,6 +176,12 @@
 				<groupId>org.apache.solr</groupId>
 				<artifactId>solr-solrj</artifactId>
 				<version>${solrj.version}</version>
+			</dependency>
+			<!-- jodis -->
+			<dependency>
+				<groupId>io.codis.jodis</groupId>
+				<artifactId>jodis</artifactId>
+				<version>${jodis.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
