--- a/taotao-parent/taotao-rest/pom.xml
+++ b/taotao-parent/taotao-rest/pom.xml
@@ -45,7 +45,19 @@
 		<artifactId>jsp-api</artifactId>
 		<scope>provided</scope>
 	</dependency>
+	<!-- jodis -->
+	<dependency>
+		<groupId>io.codis.jodis</groupId>
+		<artifactId>jodis</artifactId>
+	</dependency>
+  <!-- jedis -->
+ 	<dependency>
+  		<groupId>redis.clients</groupId>
+    	<artifactId>jedis</artifactId>
+    	<version>2.8.0</version>
+  	</dependency>	
   </dependencies>
+  
   <build>
 		<!-- 配置插件 -->
 		<plugins>
