--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -190,6 +190,7 @@
 		<module>taotao-manager</module>
 		<module>taotao-rest</module>
 		<module>taotao-portal</module>
+		<module>taotao-search</module>
 	</modules>
 	<build>
 		<finalName>${project.artifactId}</finalName>
