--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -191,6 +191,7 @@
 		<module>taotao-rest</module>
 		<module>taotao-portal</module>
 		<module>taotao-search</module>
+		<module>taotao-sso</module>
 	</modules>
 	<build>
 		<finalName>${project.artifactId}</finalName>
